fix keyboard wren

--- a/Single-cycle CPU/db/exp12.lpc.html
+++ b/Single-cycle CPU/db/exp12.lpc.html
@@ -16,6 +16,54 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >d2</TD>
+<TD >5</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >7</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >d</TD>
+<TD >5</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >7</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >mem</TD>
+<TD >5</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >7</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >tpc2</TD>
 <TD >5</TD>
 <TD >1</TD>
@@ -97,14 +145,14 @@
 </TR>
 <TR >
 <TD >kbmem</TD>
-<TD >38</TD>
-<TD >28</TD>
+<TD >70</TD>
+<TD >25</TD>
 <TD >0</TD>
-<TD >28</TD>
+<TD >25</TD>
 <TD >32</TD>
-<TD >28</TD>
-<TD >28</TD>
-<TD >28</TD>
+<TD >25</TD>
+<TD >25</TD>
+<TD >25</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
