--- a/Single-cycle CPU/db/exp12.lpc.html
+++ b/Single-cycle CPU/db/exp12.lpc.html
@@ -16,7 +16,7 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >d2</TD>
+<TD >a5</TD>
 <TD >5</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -32,7 +32,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >d</TD>
+<TD >a4</TD>
 <TD >5</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -48,7 +48,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >mem</TD>
+<TD >a3</TD>
 <TD >5</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -64,7 +64,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >tpc2</TD>
+<TD >a1</TD>
 <TD >5</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -80,7 +80,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >tpc1</TD>
+<TD >a2</TD>
 <TD >5</TD>
 <TD >1</TD>
 <TD >0</TD>
@@ -288,15 +288,47 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >sc|al_unit|select</TD>
+<TD >130</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >sc|al_unit|shifter</TD>
+<TD >39</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >sc|al_unit</TD>
-<TD >68</TD>
+<TD >96</TD>
+<TD >28</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >28</TD>
 <TD >33</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >28</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -386,13 +418,13 @@
 <TR >
 <TD >sc|alu_a</TD>
 <TD >65</TD>
-<TD >31</TD>
+<TD >27</TD>
 <TD >0</TD>
-<TD >31</TD>
+<TD >27</TD>
 <TD >32</TD>
-<TD >31</TD>
-<TD >31</TD>
-<TD >31</TD>
+<TD >27</TD>
+<TD >27</TD>
+<TD >27</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
